			   XPCE ChangeLog
			   ==============

* FIXED: bar->compute can fail.

* FIXED: Prolog navigator loading wrong Prolog module.  Fabien Todescato.

VERSION 6.1.11, distributed with SWI-Prolog 5.1.11
==================================================

* ADDED: Redirect events to the label of a tab to ->label_event to allow
  adding user-defined event-handling to tab-labels.

* FIXED: Proper handling of `tab->destroy': update layout of the tab labels
  and ensure one of the tabs is `on-top'.

* ADDED: library(tabbed_window) for putting windows in tabs.

* FIXED: handle keyboard focus to windows displayed on windows.

* FIXED: Term-description of class view.

* FIXED: Cursor up/down in list-browser.  Anjo Anjewierden.

* FIXED: default-button and modified-item handling in nested dialog-groups.
  Juergen Repp.

* FIXED: Make `window->background' work with images on Windows.  Used to be
  supported on the X11 version only.


VERSION 6.1.10, distributed with SWI-Prolog 5.1.10
==================================================

* ENHANCED: many small changes to PceEmacs, cross-referencer and other parts
  of the XPCE libraries dealing with Prolog itself.

* MODIFIED: moved library(emacs/prolog_xref) to library(pce_prolog_xref) for
  better library structure.

* ADDED: library(pce_class_index).  Ongoing work to simplify class management.

* ADDED: Support for cross-referencing class definitions and usage from
  library('emacs/prolog_xref').

* ADDED: Class keybinding reports pending keystrokes of multi-key commands.


VERSION 6.1.9, distributed with SWI-Prolog 5.1.9
================================================

* ADDED: Enhanced HTML/XGML/XML structure viewer from library(doc/xml_browse)
  with search and some more goodies.  Added this tool to to demo programs.

* MODIFIED: Use win_btnface for default background colour of dialog
  windows.  Seems to make more sense to get a reasonable default
  colour on Windows XP.
